assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: Lato, sans-serif;
    font-weight: 300;
    color: #3a3a3a;
}

/* headings and logo */

h1, h2 {
    font-family: Oswald, sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;
    color: #252525;
}

#logo {
    float: left;
    font-size: 280%;
    margin-left: 30px;
}

/* navigation links */

#menu {
    font-size: 110%;
    letter-spacing: 4px;
}

#menu, #logo {
    line-height: 75px;
}

#menu li {
    float: right;
    list-style-type: none;
    margin-right: 30px;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    border-bottom: 1px solid #3a3a3a;
}


/* Hero Image */

#hero-image {
    height: 600px;
    width: 100%;
    background: url('../images/hero-image.webp') no-repeat center center;
}

#hero-outer{
    height: 600px;
    width: 100%;
    overflow: hidden;

    position: relative;

    /* animates zoom effect on the loading page */
    animation-name: hero-zoom;
    animation-duration: 5s;
    animation-fill-mode: forwards;
}



/* Creates a level of zoom for the Hero Image */

@keyframes hero-zoom {
    from{
        transform: scale(1);
    }
    to{
        transform: scale(1.1);
    }
}

/* Club Ethos */

#club-ethos {
    height: 600px;
}

#left-about {
    padding-top: 30px;
    width: 33%;
    float: left;
}

#right-about {
    padding-top: 30px;
    width: 33%;
    float: right;
}

#center-about {
    width: 33%;
    margin: 0 auto;
    background-color:green;
}

hr {
    border-top: 1px solid #3a3a3a;
    width: 100%;
    margin: 5px 0;
}

.left-about-heading {
    width: 60%;
    float: right;
    line-height: 20px;
    clear: both;
    margin-bottom: 50px;
}

.right-about-heading {
    width: 60%;
    float: left;
    line-height: 20px;
    clear: both;
    margin-bottom: 50px;
}

.right-about-heading h2 {
    text-align: right;
}

.right-about-heading p {
    text-align: right;
}

